--- a/Style.css
+++ b/Style.css
@@ -14,10 +14,18 @@ main {
 
 #texto-bienvenida {
     text-align: center;
-    margin: 30px 0 40px 0;
+    margin: 30px 0 0 0;
     font-family: "Josefin Sans", sans-serif;
     font-weight: 500;
     font-size: 25px;
+    color: rgb(11, 30, 46);
+
+}
+
+#advertencia {
+    text-align: center;
+    font-family: "Josefin Sans", sans-serif;
+    margin-bottom: 30px;
     color: rgb(11, 30, 46);
 
 }
@@ -69,6 +77,20 @@ textarea {
     border-image: linear-gradient(#9AD0C2, #2D9596);
     border-image-slice: 10;
     box-shadow: black 0px 5px 5px;
+}
+
+#area-encriptar {
+    background-image: url(img/Fondo\ de\ espera\ encriptar.png);
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 50% 105%;
+}
+
+#area-desencriptar {
+    background-image: url(img/Fondo\ de\ espera\ desencriptar.png);
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 50% 110%;
 }
 
 button {
