--- a/Style.css
+++ b/Style.css
@@ -93,7 +93,26 @@ textarea {
     background-position: 50% 110%;
 }
 
-button {
+#copiar-encriptado, #copiar-desencriptado {
+    width: 40px;
+    height: 45px;
+    position: relative;
+    bottom: 8.2vw;
+    left: 18.5vw;
+    background-image: url(img/Copiar.png);
+    background-position: center;
+    background-size: 100% 100%;
+    border: none;
+    background-color: transparent;
+    opacity: 0.5;
+}
+
+#copiar-encriptado:hover, #copiar-desencriptado:hover {
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+#boton-encriptar, #boton-desencriptar {
     width: 200px;
     height: 50px;
     border-radius: 20px;
@@ -103,9 +122,10 @@ button {
     font-size: 20px;
     box-shadow: black 0px 3px 10px;
     transition: background-color 0.6s, box-shadow 0.7s, font-size 0.5s;
+    margin-top: -3vw;
 }
 
-button:hover {
+#boton-encriptar:hover, #boton-desencriptar:hover {
     cursor: pointer;
     font-size: 21px;
     background-color: #5fcb7c;
@@ -115,6 +135,7 @@ button:hover {
 }
  
 footer {
+    margin-top: 6vw;
     height: 200px;
     background-color: #1b1b1b;
     border-radius: 100vw 0 0 0;
